--- a/Analise_Tips.ipynb
+++ b/Analise_Tips.ipynb
@@ -6,7 +6,7 @@
       "name": "Analise Tips.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOD4pKLFzM2dDfPjlh3UfJ7",
+      "authorship_tag": "ABX9TyMyuAGbLOfgAveQysPUPmgr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,14 +26,76 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Qtpxfp9JA3h0",
+        "colab_type": "text"
+      },
+      "source": [
+        "##Importando base de dados."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "siWfOtPs_lXe",
+        "id": "QCdoc88YBIvd",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "import seaborn as sns"
+        "import pandas as pd"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KkJLrSADBT-X",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "pd.read_csv('/content/tips.csv')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7nGDJl3EBhQj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "dados = pd.read_csv('/content/tips.csv')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZVJ7baRvCLen",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "dados.head()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jC1DX_N5CXEe",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
