--- a/Analise_Tips.ipynb
+++ b/Analise_Tips.ipynb
@@ -6,7 +6,7 @@
       "name": "Analise Tips.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMyuAGbLOfgAveQysPUPmgr",
+      "authorship_tag": "ABX9TyPjPBJDzVSP1FxmNHmnYYLu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,9 +88,274 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SPaYyvs4C2tt",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Traducao"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "jC1DX_N5CXEe",
+        "id": "0d1oRxIpC8o-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "dados.columns"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ewmsVMjBC_vK",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "renomear ={\n",
+        "    'total_bill': 'valor_da_conta', \n",
+        "           'tip': 'gorjeta', \n",
+        "           'dessert' :'sobremesa', \n",
+        "           'day' : 'dia_da_semana', \n",
+        "           'time': 'hora_do_dia',\n",
+        "           'size': 'total_de_pessoas'\n",
+        "           }\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mo-4YW2YEAL9",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "type(dados)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "f11RB94wEXuk",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "gorjetas = dados.rename(columns= renomear) "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s0qmmOU7Ejl-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "gorjetas.head(1)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "B2AgXpHeEn9d",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "gorjetas.sobremesa.unique()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-_KqWr6vE3MR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "sim_nao = {'No': 'Nao',\n",
+        "           'Yes': 'Sim'}"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iRbeTuuRFXNx",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "gorjetas.sobremesa.map(sim_nao)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1O447d7jFzpK",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "gorjetas.head(1)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4xu_2dBeF9HA",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "gorjetas.sobremesa = gorjetas.sobremesa.map(sim_nao)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4HpYm8fUGGgJ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "gorjetas.head(1)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "B4xkT1NEGKas",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "gorjetas.dia_da_semana.unique()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MHebxxEoGQA0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "dias = {'Sun': 'Domingo', 'Sat': 'Sabado', 'Thur': 'Quinta', 'Fri':'Sexta'}"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wgzXmZz0GtXI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "gorjetas.dia_da_semana = gorjetas.dia_da_semana.map(dias)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6w9oeGFFG34Q",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "gorjetas.head(1)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9JWr0J29G7ZY",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "gorjetas.hora_do_dia.unique()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9xMs7vfjHDKP",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "hora = {'Dinner': 'Jantar', 'Lunch':'Almoco'}"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aEcw-afHHh3G",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "gorjetas.hora_do_dia = gorjetas.hora_do_dia.map(hora)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "78lfY45CIKOG",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "gorjetas.head(1)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pcqrEcJpIQ8c",
         "colab_type": "code",
         "colab": {}
       },
