--- a/Analise_Tips.ipynb
+++ b/Analise_Tips.ipynb
@@ -6,7 +6,8 @@
       "name": "Analise Tips.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPjPBJDzVSP1FxmNHmnYYLu",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNZ3JnfSLGkAwOVzzE3Xsvy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -360,7 +361,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "import seaborn as sns"
       ],
       "execution_count": null,
       "outputs": []
