--- a/Analise_Tips.ipynb
+++ b/Analise_Tips.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNZ3JnfSLGkAwOVzzE3Xsvy",
+      "authorship_tag": "ABX9TyORYslkwnDjZq7KlpmZG2hj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -354,6 +354,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oIq7g4P-R8QV",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Importando o Seaborn"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "pcqrEcJpIQ8c",
@@ -361,7 +371,231 @@
         "colab": {}
       },
       "source": [
+        "pip install seaborn==0.9.0"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Bcw_77J4SRy_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         "import seaborn as sns"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NTIemYTqSaxC",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!pip show seaborn"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lqBCd4uwStLC",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Analise  1 = Valor da conta X Gorjetas"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2Uyn7biuS2dl",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "gorjetas.columns"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9Ukn7MXPS5uz",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "valor_gorgeta = sns.scatterplot(x='valor_da_conta', y= 'gorjeta', data=gorjetas)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vWEwJkHXUcma",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Aparentemente os valores das as gorjetas aumentam conforme o valor das contas."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HpKE38IPTbNT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "gorjetas.shape[0]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jae0WTIDU2Zf",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print('A base de dados contem () registros \\n'.format(gorjetas.shape[0]))\n",
+        "print('Registros nao nulos')\n",
+        "gorjetas.count()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iyOMygIpXzCq",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Criando a porcentagem"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3kScdiyLWPu-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "gorjetas['porcentagem'] = gorjetas['gorjeta'] / gorjetas['valor_da_conta']"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Hr9cleqhYifE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "gorjetas.head()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iETo7WswYmSa",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "gorjetas.porcentagem = gorjetas.porcentagem.round(2)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nW8IDb4SY3Fh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "gorjetas.head()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LT5yBeiGY7Gx",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "porcentagem_conta = sns.scatterplot(x='valor_da_conta', y='porcentagem', data=gorjetas)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xfybaBvpaAdZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Visualmente, o valor da conta nao e proporcional ao valor da gorjeta**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kBiX3y2kaTWE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "porcentagem_conta_linha = sns.relplot(x='valor_da_conta', y='porcentagem', kind= 'line', data=gorjetas)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "S-H-VQO_bUt8",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "sns.lmplot (x= 'valor_da_conta', y= 'porcentagem', data=gorjetas)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fFRGZS0GcuRs",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
